--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --progress -p",
+    "watch": "webpack --progress --watch"
   },
   "author": "",
   "license": "ISC",
@@ -17,4 +19,3 @@
     "babel-preset-env": "^1.6.1",
     "webpack": "^3.8.1"
   }
-}
