--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "myapp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",  
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --progress -p",
+    "server": "webpack-dev-server --open",
     "watch": "webpack --progress --watch"
   },
   "author": "",
@@ -17,6 +18,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
-    "webpack": "^3.8.1"
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.3"
   }
 }
