--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --progress -p",
-    "server": "webpack-dev-server --open",
+    "server": "webpack-dev-server  --host 0.0.0.0 --open",
     "watch": "webpack --progress --watch"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jquery": "^3.2.1",
     "moment": "^2.19.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
+    "gulp": "^3.9.1",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.3"
   }
